# trustcheck

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  action.yml  context7.json  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  labels.yml  mutation-groups.toml  pull_request_template_release.md  trustcheck-action-fail-policy.json
.github/ISSUE_TEMPLATE/: general.yml
.github/workflows/: acceptance-matrix.yml  action-integration.yml  bandit.yml  benchmarks.yml  binary-security.yml  ci.yml  codeql.yml  dependabot.yml  docs.yml  dynamic-analyzers.yml  fuzz.yml  live-integration.yml  mutation.yml  plagiarism-scan.yml  post-release-parity.yml  publish.yml  sarif-integration.yml  scorecard.yml  semgrep.yml  source-build.yml
benchmarks/: README.md  benchmark_against_pip_audit.py  measure_command.py
benchmarks/corpus/: corpus.json  malicious-calibration.json  pylock.toml  requirements-hashed.txt  requirements-main.txt  requirements-malformed.txt  requirements-markers-extras.txt  requirements-private-index.txt  requirements-profiles.txt  requirements-resolution.txt  requirements-vcs-editable.txt  requirements.txt  truth-public-key.pem  truth.json  truth.json.sig
benchmarks/results/: benchmark-public-key.pem  latest.json  latest.json.sig
docs/: changelog.md  index.md
docs/assets/javascripts/: disable-search-shortcut.js
docs/cli/: configuration.md  exit-codes.md  index.md  policies.md
docs/development/: hardening-tracker.md  release-baseline.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: ci-integration.md  development.md  github-pages.md  release-publishing.md
docs/reference/: benchmarks.md  compatibility.md  industry-formats.md  json-contract.md  limitations-data-flows.md  malicious-package-detection.md  performance-extensibility.md  python-api.md  recommendations.md  remediation.md  trust-model.md
fuzz/: README.md  fuzz_artifacts.py  fuzz_exports.py  fuzz_indexes.py  fuzz_lockfiles.py  fuzz_provenance.py  fuzz_requirements.py
overrides/: main.html
packaging/dynamic-analyzers/: Dockerfile  README.md  requirements-build-backends.txt
plugins/trustcheck-gate/.claude-plugin/: plugin.json
plugins/trustcheck-gate/.codex-plugin/: plugin.json
plugins/trustcheck-gate/.cursor-plugin/: plugin.json
plugins/trustcheck-gate/schemas/: accepted-trustcheck-report-1.11.0.json  adapter-request-0.1.json  adapter-result-0.1.json
plugins/trustcheck-gate/skills/trustcheck-gate/: SKILL.md
plugins/trustcheck-gate/skills/trustcheck-gate/agents/: openai.yaml
plugins/trustcheck-gate/skills/trustcheck-gate/references/: operation-schema.md
plugins/trustcheck-gate/skills/trustcheck-gate/scripts/: trustcheck_agent_adapter.py
reports/: github-code-copy-findings.md
requirements/: ci.in  runtime.in  semgrep.in
scripts/: acceptance_matrix.py  benchmark_signature.py  build_msix_layout.py  build_standalone.py  check_audit_exceptions.py  check_mutation_score.py  dependency_bounds.py  export_homebrew_tap.py  github_plagiarism_scan.py  mutation_targets.py  smoke_test_distribution.py  trustcheck_binary.py  update_benchmark_table.py  update_coverage_badge.py  validate_distribution_artifacts.py  validate_sarif.py  verify_release_channels.py  verify_release_version.py
snap/: README.md  snapcraft.yaml
src/trustcheck/: __init__.py  _resolver_guard.py  action_options.py  advisories.py  artifacts.py  attestations.py  cache.py  cli.py  cli_models.py  cli_render.py  cli_runtime.py  cli_targets.py  contract.py  diff.py  doctor.py  dynamic.py  export_cyclonedx.py  export_markdown.py  export_models.py  export_openvex.py  export_sarif.py  export_spdx.py  export_xml.py  exports.py  github_action.py  impact.py  indexes.py  lockfile_parsers.py  lockfiles.py  malicious.py  manifest.py  models.py  plugin_manifest.py  plugins.py  policy.py  pre_commit.py  provenance.py  pypi.py  remediation.py  remediation_models.py  (+9 more)
src/trustcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/trustcheck/cli_commands/: __init__.py  context.py  diff.py  doctor.py  environment.py  impact.py  inspect.py  install.py  manifest.py  plugin_manifest.py  scan.py
src/trustcheck/plugin_schemas/: plugin-ipc-request-1.json  plugin-ipc-response-1.json  plugin-statement-1.json  plugin-statement-2.json
tests/: security_http_fixture.py  test_advisories.py  test_agent_adapter.py  test_artifacts.py  test_attestations.py  test_benchmark_results.py  test_binary_security_workflow.py  test_ci_workflow.py  test_cli.py  test_contract.py  test_coverage_badge.py  test_dependency_bounds.py  test_diff.py  test_distribution_artifacts.py  test_docker_workflows.py  test_doctor.py  test_dynamic.py  test_edge_cases.py  test_exports.py  test_github_action.py  test_homebrew_tap_export.py  test_impact.py  test_indexes.py  test_install_command.py  test_integration_live.py  test_lockfiles.py  test_malicious.py  test_manifest.py  test_msix_packaging.py  test_mutation_score.py  test_performance_extensibility.py  test_plagiarism_scan.py  test_plugin_manifest_tool.py  test_plugin_security.py  test_pre_commit.py  test_property_invariants.py  test_provenance.py  test_public_api.py  test_pypi.py  test_release_channels.py  (+11 more)
tests/_tmp/: bad-scan.toml  empty-scan.toml  empty-scan.txt  invalid-scan.txt  scan-poetry.toml  scan-project.toml
tests/fixtures/: client_config.json  policy_require_expected_repo.json
tests/fixtures/plugin-legacy-v1/: trustcheck-plugin.json
tests/snapshots/: contract_schema.json  report_minimal.json  report_verified.json
web/: index.html  script.js  styles.css
