[build-system]
requires = ["setuptools>=68", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustcheck"
dynamic = ["version"]
description = "Package trust and provenance verification for PyPI consumers."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pypi", "security", "supply-chain", "provenance", "attestations"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "packaging>=24,<26",
  "pypi-attestations>=0.0.29,<1",
  "tomli>=2,<3; python_version < '3.11'",
]

[project.scripts]
trustcheck = "trustcheck.cli:main"

[project.urls]
Repository = "https://github.com/Halfblood-Prince/trustcheck"
Documentation = "https://halfblood-prince.github.io/trustcheck/"
Issues = "https://discord.com/channels/267624335836053506/1490011081958101194"
Changelog = "https://github.com/Halfblood-Prince/trustcheck/releases"
Security = "https://discord.com/channels/267624335836053506/1490011081958101194"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/trustcheck/_version.py"
fallback_version = "0+unknown"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unused_configs = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["trustcheck"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
