[build-system]
requires = [
  "setuptools>=80",
  "setuptools-scm>=10",
  "wheel>=0.46",
]
build-backend = "setuptools.build_meta"

[project]
name = "trustcheck"
dynamic = ["version"]
description = "Package trust and provenance verification for PyPI consumers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Halfblood Prince" }]
maintainers = [{ name = "Halfblood Prince" }]
keywords = ["pypi", "security", "supply-chain", "provenance", "attestations"]
license = "LicenseRef-Trustcheck-Personal-Use"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=49.0.0,<50",
  "packaging>=24,<27",
  "pydantic>=2.12,<3",
  "sigstore>=4.4,<5",
  "tomlkit>=0.13,<1",
  "urllib3>=2.7,<3",
]

[project.optional-dependencies]
keyring = ["keyring>=25,<27"]
test = [
  "hypothesis>=6.100,<7",
  "Pillow>=11,<13",
  "pytest>=8,<10",
]

[project.scripts]
trustcheck = "trustcheck.cli:main"
trustcheck-pre-commit = "trustcheck.pre_commit:main"
trustcheck-workspace = "trustcheck.workspace:main"

[project.urls]
Repository = "https://github.com/Halfblood-Prince/trustcheck"
Documentation = "https://halfblood-prince.github.io/trustcheck/docs/"
Issues = "https://github.com/Halfblood-Prince/trustcheck/issues"
Support = "https://github.com/Halfblood-Prince/trustcheck/issues"
Changelog = "https://github.com/Halfblood-Prince/trustcheck/releases"
Security = "https://github.com/Halfblood-Prince/trustcheck/security/advisories/new"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trustcheck = ["py.typed", "plugin_schemas/*.json"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/trustcheck/_version.py"
fallback_version = "0.0.0+source"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_configs = true
pretty = true

[[tool.mypy.overrides]]
module = "trustcheck._version"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mutmut]
source_paths = ["src/"]
pytest_add_cli_args_test_selection = ["tests/test_property_invariants.py"]
timeout_multiplier = 20.0
timeout_constant = 2.0

[tool.coverage.run]
branch = true
source = ["trustcheck"]

[tool.coverage.report]
fail_under = 96
show_missing = true
skip_covered = true
